# python-fastapi-poc

./: .env.example  .gitignore  CLAUDE.md  README.md  TASK_PLAN.md  conftest.py  docker-compose.yml  justfile  pyproject.toml  spec.md
.claude/standards/: GIT_STANDARDS.md  JAVA_STANDARDS.md  PYTHON_STANDARDS.md  _INDEX.md
.devcontainer/: .dockerignore  Dockerfile  devcontainer.json  docker-compose.yml  entrypoint.sh  firewall-allowlist.txt  firewall.sh
.github/actions/setup-python-poetry/: action.yml
.github/workflows/: ci.yml  devcontainer.yml
alembic/: env.py
alembic/versions/: 1c3823cf5e3b_add_routine_executions_table.py  7b9f8b7a1c2d_make_routine_timestamps_timezone_aware.py  a3f8c2d1b4e7_add_execution_queue_columns.py  bbc32a35e8ff_initial.py  c64e0a7be9e1_add_routines_and_actions_tables.py  ce0b38a4532b_make_actions_position_constraint_.py  d523983781fd_drop_sequences_table.py  e4f3a2b1c0d9_add_action_executions_table.py  fb85d06b1459_add_users_table.py
allure-report/: index.html
allure-report/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
allure-report/data/attachments/: 23851938c850d4e1.txt  312c8cd89ac005ca.txt  4166daf69f5d5d93.txt  (+8 more)
allure-report/export/: influxDbData.txt  prometheusData.txt
allure-report/history/: history.json
allure-report/widgets/: behaviors.json  duration-trend.json  duration.json  severity.json  status-chart.json  suites.json  summary.json
backend/: auth_routes.py  config.py  database.py  domain_types.py  exceptions.py  execution_engine.py  google_oauth.py  main.py  models.py  rate_limiter.py  redis_client.py  routes.py  routine_routes.py  routine_services.py  scheduler.py  schemas.py  security.py  services.py  telemetry_routes.py  telemetry_schemas.py  user_routes.py
docs/: architecture.md  devcontainer-security.md  frontend.md  google-oauth-setup.md  how-to-add-a-crud-feature.md  python-toolchain.md  testing.md  ui-tailwind-design-system.md
docs/adr/: 001-client-side-monitoring-architecture.md
docs/code-reviews/: 2026-03-23-claude-review-brief-pr-style.md  2026-03-23-other-recommendations.md  2026-03-23-recommended-frontend-stack.md  2026-03-23-recommended-linting-and-quality-gates.md  2026-03-24-reference-architecture-review.md  2026-03-24-security-harden-review.md
docs/codex-reviews/: 01-claude-review-brief.md  02-claude-review-brief-short.md  04-index.md  05-codex-review-findings.md  11-backend-api-contract-for-frontend.md  20-final-compare-and-contrast.md
frontend/: .prettierignore  .stylelintrc.json  TESTING.md  eslint.config.js  index.html  package-lock.json  package.json  playwright-ct.config.ts  playwright.config.ts  tailwind.config.js  tsconfig.app.json  tsconfig.ct.json  tsconfig.e2e.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/ct/: ExecutionCard.spec.ts  RoutineFormFields.spec.ts  UserTable.spec.ts
frontend/e2e/: accessibility.spec.ts  active-executions.spec.ts  auth.spec.ts  dashboard.spec.ts  execution-history.spec.ts  routine-detail.spec.ts  routine-form.spec.ts  routines.mocked.spec.ts  routines.spec.ts  sequences.crud.spec.ts  sequences.detail.spec.ts  sequences.list.spec.ts  users.spec.ts
frontend/playwright/: index.ts
frontend/src/: App.vue  main.ts  primevue-pt.ts  style.css
monitoring/loki/: loki-config.yml
monitoring/prometheus/: prometheus.yml
scripts/: export_openapi.py
tests/: conftest.py  test_auth.py  test_google_oauth.py  test_health.py  test_metrics.py  test_routines.py  test_security.py  test_sequences.py  test_telemetry.py  test_users.py
tests/e2e/: conftest.py  test_observability_stack.py
tests/integration/: conftest.py  test_auth.py  test_google_oauth.py  test_metrics.py  test_routines.py
tests/perf/: helpers.py  test_db_event_loop_blocking.py  test_event_loop_blocking.py
tests/unit/: test_google_oauth.py
(+138 files in other folders)
